--- a/ResortApp.Web/appsettings.json
+++ b/ResortApp.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=127.0.0.1,1433;Database=ResortApp;User Id=sa;Password=#DaffaGila123;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+      "DefaultConnection": "Server=127.0.0.1,1433;User Id=sa;Password=#DaffaGila123;Database=ResortApp;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   }
 }
