--- a/ResortApp.Infrastructure/ResortApp.Infrastructure.csproj
+++ b/ResortApp.Infrastructure/ResortApp.Infrastructure.csproj
@@ -18,4 +18,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ResortApp.Domain\ResortApp.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
