add Repository and Interfaces

--- a/ResortApp.Infrastructure/ResortApp.Infrastructure.csproj
+++ b/ResortApp.Infrastructure/ResortApp.Infrastructure.csproj
@@ -20,11 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ResortApp.Application\ResortApp.Application.csproj" />
     <ProjectReference Include="..\ResortApp.Domain\ResortApp.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
