--- a/ResortApp.Web/appsettings.json
+++ b/ResortApp.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=127.0.0.1,1433;User Id=sa;Password=#DaffaGila123;Database=ResortApp;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+      "DefaultConnection": "YOUR_CONNECTION_STRING"
   },
   "Stripe" : {
     "SecretKey": "sk_test_YOUR_SECRET_KEY_HERE",
