--- a/ResortApp.Web/appsettings.json
+++ b/ResortApp.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "YOUR_CONNECTION_STRING"
+      "DefaultConnection": "Server=127.0.0.1,1433;User Id=sa;Password=YOUR_DB_PASSWORD;Database=DATABASE_NAME;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Stripe" : {
     "SecretKey": "sk_test_YOUR_SECRET_KEY_HERE",
