--- a/ResortApp.Web/appsettings.json
+++ b/ResortApp.Web/appsettings.json
@@ -7,10 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=127.0.0.1,1433;User Id=sa;Password=YOUR_DB_PASSWORD;Database=DATABASE_NAME;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+      "DefaultConnection": "Server=127.0.0.1,1433;User Id=sa;Password=#DaffaGila123;Database=ResortApp;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Stripe" : {
     "SecretKey": "sk_test_YOUR_SECRET_KEY_HERE",
     "PublishableKey": "sk_test_YOUR_PUBLISHABLE_KEY_HERE"
+  },
+  "Syncfusion": {
+    "LicenseKey": "YOUR_SYNCFUSION_KEY_HERE"
   }
 }
